--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,17 @@
 {
   "name": "backend",
   "packageManager": "yarn@3.4.1",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.4.3",
+    "morgan": "^1.10.0"
   }
 }
